unpackaged/main/default/objects/CSA__c/CSA__c.object-meta.xml
<CustomObject>
    <label>CSA</label>
    <nameField>
        <displayFormat>CSA-{0000}</displayFormat>
        <label>CSA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSA&#39;s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>