unpackaged/main/default/objects/CSA__c/fields/CSA_Account__c.field-meta.xml
<CustomField>
    <fullName>CSA_Account__c</fullName>
    <label>CSA Account</label>
    <length>80</length>
    <type>Text</type>
</CustomField>