unpackaged/main/default/objects/CSA__c/fields/CSA_Control__c.field-meta.xml
<CustomField>
    <fullName>CSA_Control__c</fullName>
    <label>CSA Control</label>
    <length>80</length>
    <type>Text</type>
</CustomField>