unpackaged/main/default/objects/CSA__c/fields/CSA_Number__c.field-meta.xml
<CustomField>
    <fullName>CSA_Number__c</fullName>
    <label>CSA_Number***</label>
    <length>255</length>
    <type>Text</type>
</CustomField>