unpackaged/main/default/objects/CSA__c/fields/CSA_Suffix__c.field-meta.xml
<CustomField>
    <fullName>CSA_Suffix__c</fullName>
    <label>CSA Suffix</label>
    <length>80</length>
    <type>Text</type>
</CustomField>