unpackaged/main/default/objects/CSA__c/fields/Implementation__c.field-meta.xml
<CustomField>
    <fullName>Implementation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Implementation</label>
    <referenceTo>Implementation__c</referenceTo>
    <relationshipLabel>CSA&#39;s</relationshipLabel>
    <relationshipName>CSA_s</relationshipName>
    <type>Lookup</type>
</CustomField>