unpackaged/main/default/objects/CSA__c/fields/Suffix_Number__c.field-meta.xml
<CustomField>
    <fullName>Suffix_Number__c</fullName>
    <label>Suffix Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>