unpackaged/main/default/objects/CSA__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CSA_Control__c</columns>
    <columns>CSA_Suffix__c</columns>
    <columns>CSA_Account__c</columns>
    <columns>Medical_Drug_List__c</columns>
    <columns>Go_Live_Date__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>